# Chronos

./: .antigravityrules  .gitignore  README.md  install.cmd  install.ps1  install.sh  package-lock.json  pyproject.toml
.github/workflows/: release.yml  test.yml
chronos/: __init__.py  __main__.py  cli.py  config.py  runner.py  session.py  transcript.py
website/: package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/api/admin/stats/: route.ts
website/app/components/: Features.tsx  Footer.tsx  HeroClient.tsx
